# tr-dependency-analyser

./: .abapgit.xml  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  ARCHITECT_REVIEW.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  FEEDBACK_LOG.md  GAPS_IN_CURRENT_DESIGN.md  HOW_TO_PUSH_TO_GITHUB.md  HOW_TO_UPDATE_GITHUB_AND_ECLIPSE.md  LICENSE  NEXT_STEPS.md  README.md  RELEASE_PLAYBOOK.md  SECURITY.md  SESSION_HANDOVER_2026-06-19.md  SESSION_SUMMARY.md  SOLUTION_ARCHITECTURE.md  TR_Dependency_Analyzer_Plan.md  artifacts.xml.xz  content.xml.xz  index.html  p2.index  package.json  pyproject.toml
.claude/: README.md  settings.json  statusline
abap/: .abapgit.xml  INSTALL_VIA_ABAPGIT.md
abap_cloud/: .abapgit.xml  README_CLOUD.md
applications/: README.md
architecture/: README.md
context/: README.md
database/: README.md
docs/: README.md
eclipse/: MISSING_FOR_ABAP_CLEANER_PARITY.md
evaluation/: README.md
events/: README.md
governance/: README.md
infra/: README.md
integrations/: README.md
journal/: README.md
knowledge/: README.md
lessons/: README.md  abap-lessons.md  architecture-lessons.md  cds-lessons.md  dangerous-patterns.md  debugging-lessons.md  deployment-lessons.md  do-not-repeat.md  failed-patterns.md  hana-lessons.md  integration-lessons.md  performance-lessons.md  private-cloud-lessons.md  public-cloud-lessons.md  rap-lessons.md  successful-patterns.md
logs/: README.md
manual_install/: 01_ZGCTS_DEP_HISTORY.tabl.txt  01_ZGCTS_HIST.tabl.txt  02_ZCL_GCTS_TR_ANALYZER.clas.txt  CODE_REVIEW.md  README.md  (+2 more)
(+388 files in other folders)
